--- a/examples/authcodeflow_demo/src/main/res/values/strings.xml
+++ b/examples/authcodeflow_demo/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">IBM Verify - Auth Code Flow Demo</string>
+    <string name="app_name">AuthCode Demo</string>
 </resources>
