--- a/examples/fido2_demo/src/main/res/values/strings.xml
+++ b/examples/fido2_demo/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">FIDO2 demo</string>
+    <string name="app_name">FIDO2 Demo</string>
+    <string name="version_info">%1$s (%2$d)</string>
 </resources>
